<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height_50" >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/main_reset_password_title"
            android:textColor="@color/tv_bar_color"
            android:textSize="@dimen/tv_size_22" />
        <RelativeLayout
            android:id="@+id/up_jiantou"
            android:layout_width="@dimen/title_bar_height_50"
            android:layout_height="fill_parent"
            android:gravity="center" >

            <ImageView
                android:layout_width="@dimen/left_arrow"
                android:layout_height="@dimen/left_arrow"
                android:contentDescription="@string/app_name"
                android:src="@drawable/left_arrow"
                android:id="@+id/btn_exit" />
        </RelativeLayout>
    </RelativeLayout>

    <ImageView
        android:layout_gravity="center_horizontal"
        android:id="@+id/bar_line"
        android:layout_width="@dimen/login_tv_user_bg_width"
        android:layout_height="wrap_content"
        android:background="@drawable/bar_line" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <ImageView
            android:layout_centerHorizontal="true"
            android:id="@+id/phone_number"
            android:layout_width="@dimen/login_tv_user_bg_width"
            android:layout_height="@dimen/register_iv_bg_height_56"
            android:background="@drawable/register_et_bg"/>

        <EditText
            android:layout_centerHorizontal="true"
            android:id="@+id/edit_password1"
            android:layout_alignLeft="@id/phone_number"
            android:layout_width="@dimen/register_ed_width_210"
            android:layout_height="@dimen/register_iv_bg_height_56"
            android:background="@null"
            android:hint="@string/ed_hint_pass"
            android:textSize="@dimen/tv_size_16"
            android:textColorHint="@color/tv_bar_color_hint"
            android:textColor="@color/tv_bar_color"
            android:layout_alignBottom="@+id/phone_number"
            android:layout_marginLeft="@dimen/tv_75"/>

        <TextView
            android:id="@+id/tv_yz_password"
            android:layout_alignLeft="@id/phone_number"
            android:layout_width="@dimen/tv_75"
            android:layout_height="wrap_content"
            android:text="@string/tv_title_pass"
            android:textSize="@dimen/tv_size_16"
            android:textColor="@color/tv_color"
            android:layout_marginTop="@dimen/tv_size_18"
            android:layout_marginLeft="@dimen/tv_margin_top_5"/>

        <ImageView
            android:id="@+id/zhongjianhengxian"
            android:layout_width="match_parent"
            android:layout_height="@dimen/tv_margin_left_10"
            android:layout_below="@+id/phone_number"/>

        <ImageView
            android:layout_centerHorizontal="true"
            android:id="@+id/huoquyanzhengma"
            android:layout_width="@dimen/login_tv_user_bg_width"
            android:layout_height="@dimen/register_iv_bg_height_56"
            android:background="@drawable/register_et_bg"
            android:layout_below="@+id/zhongjianhengxian" />

        <EditText
            android:id="@+id/edit_password2"
            android:layout_alignLeft="@id/edit_password1"
            android:layout_width="@dimen/register_ed_width_210"
            android:layout_height="@dimen/register_iv_bg_height_56"
            android:background="@null"
            android:layout_alignBottom="@+id/huoquyanzhengma"
            android:hint="@string/ed_hint_checkpass"
            android:textSize="@dimen/tv_size_16"
            android:textColorHint="@color/tv_bar_color_hint"
            android:textColor="@color/tv_bar_color"
            android:maxLength="16"/>

        <TextView
            android:id="@+id/tv_yz_password2"
            android:layout_alignLeft="@id/phone_number"
            android:layout_width="@dimen/tv_75"
            android:layout_height="wrap_content"
            android:text="@string/tv_title_checkpass"
            android:textSize="@dimen/tv_size_16"
            android:maxLength="16"
            android:textColor="@color/tv_color"
            android:layout_below="@+id/zhongjianhengxian"
            android:layout_marginTop="@dimen/tv_size_18"
            android:layout_marginLeft="@dimen/tv_margin_top_5" />

        <Button
            android:id="@+id/btn_finish"
            android:layout_width="@dimen/next_width"
            android:layout_height="@dimen/next_height"
            android:background="@drawable/login_button"
            android:text="@string/btn_finish"
            android:textSize="@dimen/tv_size_20"
            android:textColor="@color/tv_color"
            android:layout_below="@+id/huoquyanzhengma"
            android:layout_marginBottom="@dimen/next_margin_32"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/next_margin_32" />

    </RelativeLayout>

</LinearLayout>
