<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016 3 8.
  ~ 公司:北京校酷网络有限公司
  ~ 工作室：Hello Fish  闲来垂钓APP （注册设置密码布局界面）
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height_50">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/title_bg_color"
            android:gravity="center"
            android:text="@string/main_set_password_title"
            android:textColor="@color/white"
            android:textSize="@dimen/tv_size_20" />

        <RelativeLayout
            android:id="@+id/up_jiantou"
            android:layout_width="@dimen/title_bar_height_50"
            android:layout_height="fill_parent"
            android:gravity="center" >
            <ImageView
                android:id="@+id/btn_exit"
                android:layout_width="@dimen/left_arrow"
                android:layout_height="@dimen/left_arrow"
                android:contentDescription="@string/app_name"
                android:src="@drawable/left_arrow" />
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/get_phone_number"
            android:layout_width="match_parent"
            android:layout_height="@dimen/register_iv_bg_height_56"
            android:background="@drawable/register_et_bg" />

        <EditText
            android:id="@+id/ed_get_phone_number"
            android:layout_width="@dimen/register_ed_width_210"
            android:layout_height="@dimen/register_iv_bg_height_56"
            android:background="@null"
            android:layout_marginLeft="@dimen/et_margin_left_100"
            android:textSize="@dimen/tv_size_20"
            android:textColor="@color/et_color"
            android:layout_alignBottom="@+id/get_phone_number"
            android:enabled="false"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_phone_number"
            android:textSize="@dimen/tv_size_20"
            android:textColor="@color/tv_color"
            android:layout_marginTop="@dimen/tv_margin_top_16"
            android:layout_marginLeft="@dimen/tv_margin_left_10" />

        <ImageView
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height_10"
            android:background="@drawable/register_line"
            android:layout_below="@+id/get_phone_number"/>

        <ImageView
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="@dimen/register_iv_bg_height_56"
            android:background="@drawable/register_et_bg"
            android:layout_below="@id/line"/>

        <EditText
            android:id="@+id/edit_password1"
            android:layout_width="@dimen/register_ed_width_210"
            android:layout_height="@dimen/register_iv_bg_height_56"
            android:background="@null"
            android:hint="@string/ed_hint_pass"
            android:layout_marginLeft="@dimen/et_margin_left_100"
            android:textSize="@dimen/tv_size_20"
            android:textColor="@color/et_color"
            android:layout_alignBottom="@+id/phone_number"
            android:layout_below="@id/line"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_title_pass"
            android:textSize="@dimen/tv_size_20"
            android:textColor="@color/tv_color"
            android:layout_marginTop="@dimen/tv_margin_top_16"
            android:layout_marginLeft="@dimen/tv_margin_left_10"
            android:layout_below="@id/line"/>

        <ImageView
            android:id="@+id/zhongjianhengxian"
            android:layout_width="match_parent"
            android:layout_height="@dimen/tv_margin_left_10"
            android:background="@drawable/register_line"
            android:layout_below="@+id/phone_number" />

        <ImageView
            android:id="@+id/huoquyanzhengma"
            android:layout_width="match_parent"
            android:layout_height="@dimen/register_iv_bg_height_56"
            android:background="@drawable/register_et_bg"
            android:layout_below="@+id/zhongjianhengxian" />

        <EditText
            android:id="@+id/edit_password2"
            android:layout_width="@dimen/register_ed_width_210"
            android:layout_height="@dimen/register_iv_bg_height_56"
            android:background="@null"
            android:layout_marginLeft="@dimen/et_margin_left_100"
            android:layout_alignBottom="@+id/huoquyanzhengma"
            android:hint="@string/ed_hint_checkpass"
            android:maxLength="16"
            android:textSize="@dimen/tv_size_20"
            android:textColor="@color/et_color"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_title_checkpass"
            android:textSize="@dimen/tv_size_20"
            android:maxLength="16"
            android:textColor="@color/tv_color"
            android:layout_below="@+id/zhongjianhengxian"
            android:layout_marginTop="@dimen/tv_margin_top_16"
            android:layout_marginLeft="@dimen/tv_margin_left_10" />

        <Button
            android:id="@+id/btn_finish"
            android:layout_width="@dimen/next_width"
            android:layout_height="@dimen/next_height"
            android:background="@drawable/next"
            android:text="@string/btn_finish"
            android:textSize="@dimen/tv_size_20"
            android:textColor="@color/tv_color"
            android:layout_below="@+id/huoquyanzhengma"
            android:layout_marginBottom="@dimen/next_margin_32"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/next_margin_32" />

    </RelativeLayout>



</LinearLayout>
